# Open-electronic-classroom

./: CMakeLists.txt  teachermainwindow.cpp  teachermainwindow.ui
Teacher/ui/Open-electronic-classroom/: main.cpp  teachermainwindow.h
